<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">



    <PreferenceCategory app:title="@string/notify_header">

        <SwitchPreferenceCompat
            app:key="notify"
            app:title="@string/notify_title" />


    </PreferenceCategory>



    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="signature"
            app:title="@string/adres_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="Use default address"
            app:entries="@array/address_entries"
            app:entryValues="@array/address_values"
            app:key="reply"
            app:title="@string/address_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>




</PreferenceScreen>