<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home_button"
        android:orderInCategory="50"
        android:icon="@drawable/ic_baseline_home_24"
        android:iconTint="@android:color/white"
        app:showAsAction="always"
        android:title="" />

    <item
        android:id="@+id/camera"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_camera_24"
        android:iconTint="@android:color/white"
        app:showAsAction="ifRoom"
        android:title="" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/some_thing"
        android:orderInCategory="500"
        android:title="@string/clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="600"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/log_out"
        android:orderInCategory="600"
        android:title="@string/log_out"
        app:showAsAction="never" />



</menu>